Happiness is finally finishing an assignment. (:
Signed-off-by: sbecirovic <seila.becirovic@gmail.com>

--- a/NerdHerd/allreview.html
+++ b/NerdHerd/allreview.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html>
-    <head>
-      <meta charset="utf-8">
-      <title>NerdHerd</title>
-      <link rel="stylesheet" type="text/css" href="stil.css">
-      <link href="https://fonts.googleapis.com/css?family=Gentium+Basic|Lora|Noto+Serif" rel="stylesheet">
-    </head>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width" />
+  <title>NerdHerd</title>
+  <link rel="stylesheet" type="text/css" href="stil.css">
+  <link href="https://fonts.googleapis.com/css?family=Gentium+Basic" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
+</head>
     <body>
       <div class="stranica">
         <div class="logo">
           <div class="slika">
-              <img src="http://pichoster.net/images/2016/11/02/pozadina1RPhM.jpg" alt="NerdHerd" />
+              <img src="http://pichoster.net/images/2016/11/04/pozadina.jpg" alt="NerdHerd" />
           </div>
       </div>
       <div class="meni">
@@ -35,7 +38,7 @@
           </a>
             <p>
               “Westworld” is television’s next big game-changer, a great, multilayered tapestry of action and unexpected analysis made hypnotic by creators Jonathan Nolan and Lisa Joy and a cast that includes Anthony Hopkins, Jeffrey Wright, James Marsden, Ed Harris, Thandie Newton and Evan Rachel Wood.
-    
+
             </p>
           </div>
         </div>
