--- a/NerdHerd/contact.html
+++ b/NerdHerd/contact.html
@@ -2,15 +2,18 @@
 <html>
     <head>
       <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width" />
       <title>NerdHerd</title>
       <link rel="stylesheet" type="text/css" href="stil.css">
-      <link href="https://fonts.googleapis.com/css?family=Gentium+Basic|Lora|Noto+Serif" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Gentium+Basic" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
     </head>
     <body>
       <div class="stranica">
         <div class="logo">
           <div class="slika">
-              <img src="http://pichoster.net/images/2016/11/02/pozadina1RPhM.jpg" alt="NerdHerd" />
+              <img src="http://pichoster.net/images/2016/11/04/pozadina.jpg" alt="NerdHerd" />
           </div>
       </div>
       <div class="meni">
@@ -39,7 +42,7 @@
           </div>
           <div class="unoskont">
             <label>Text</label>
-            <textarea rows=5 maxlength="1000" name="Tekst" value=""></textarea>
+            <textarea rows=5 maxlength="1000" name="Tekst"></textarea>
           </div>
           <input class="konbutton" type="submit" value="Send">
         </form>
