--- a/NerdHerd/index.html
+++ b/NerdHerd/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html>
-    <head>
-      <meta charset="utf-8">
-      <title>NerdHerd</title>
-      <link rel="stylesheet" type="text/css" href="stil.css">
-      <link href="https://fonts.googleapis.com/css?family=Gentium+Basic|Lora|Noto+Serif" rel="stylesheet">
-    </head>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width" />
+  <title>NerdHerd</title>
+  <link rel="stylesheet" type="text/css" href="stil.css">
+  <link href="https://fonts.googleapis.com/css?family=Gentium+Basic" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
+</head>
     <body>
       <div class="stranica">
         <div class="logo">
           <div class="slika">
-              <img src="http://pichoster.net/images/2016/11/02/pozadina1RPhM.jpg" alt="NerdHerd" />
+              <img src="http://pichoster.net/images/2016/11/04/pozadina.jpg" alt="NerdHerd" />
           </div>
       </div>
       <div class="meni">
@@ -33,7 +36,7 @@
         </a>
         </div>
         <div class="bigel">
-          <img src="https://upload.wikimedia.org/wikipedia/en/e/eb/Westworld_(TV_series)_title_card.jpg" alt="Review" />
+          <img src="https://upload.wikimedia.org/wikipedia/en/e/eb/Westworld_(TV_series)_title_card.jpg" alt="Review"/>
           <a href="review.html">
           <h2>
             Westworld
