--- a/NerdHerd/allreview.html
+++ b/NerdHerd/allreview.html
@@ -1,81 +1,89 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width" />
-  <title>NerdHerd</title>
-  <link rel="stylesheet" type="text/css" href="stil.css">
-  <link href="https://fonts.googleapis.com/css?family=Gentium+Basic" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width" />
+    <title>NerdHerd</title>
+    <link rel="stylesheet" type="text/css" href="stil.css">
+    <link href="https://fonts.googleapis.com/css?family=Gentium+Basic" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
 </head>
-    <body>
-      <div class="stranica">
+
+<body>
+    <div class="stranica">
         <div class="logo">
-          <div class="slika">
-              <img src="http://pichoster.net/images/2016/11/04/pozadina.jpg" alt="NerdHerd" />
-          </div>
-      </div>
-      <div class="meni">
+            <div class="slika">
+                <img src="http://pichoster.net/images/2016/11/04/pozadina.jpg" alt="NerdHerd" />
+            </div>
+        </div>
+        <div class="meni">
             <ul class="navigacija" id="mojanav">
-            <li><a href="index.html">Latest reviews</a></li>
-            <li>  <a href="allreview.html">All reviews </a></li>
-            <li><a href="addreview.html">Add a review</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
-          </ul>
-      </div>
-      <div class="glavne">
-        <div class="revred">
-          <div class="revslika">
-            <img src="https://upload.wikimedia.org/wikipedia/en/e/eb/Westworld_(TV_series)_title_card.jpg" alt="Review" />
-          </div>
-          <div class="tekstrev">
-            <a href="review.html">
-            <h2>
+                <li><a href="index.html">Latest reviews</a>
+                </li>
+                <li> <a href="allreview.html">All reviews </a>
+                </li>
+                <li><a href="addreview.html">Add a review</a>
+                </li>
+                <li><a href="about.html">About</a>
+                </li>
+                <li><a href="contact.html">Contact</a>
+                </li>
+            </ul>
+        </div>
+        <div class="glavne">
+            <div class="revred">
+                <div class="revslika">
+                    <img src="https://upload.wikimedia.org/wikipedia/en/e/eb/Westworld_(TV_series)_title_card.jpg" alt="Review" />
+                </div>
+                <div class="tekstrev">
+                    <a href="review.html">
+                        <h2>
               Westworld
             </h2>
-          </a>
-            <p>
-              “Westworld” is television’s next big game-changer, a great, multilayered tapestry of action and unexpected analysis made hypnotic by creators Jonathan Nolan and Lisa Joy and a cast that includes Anthony Hopkins, Jeffrey Wright, James Marsden, Ed Harris, Thandie Newton and Evan Rachel Wood.
+                    </a>
+                    <p>
+                        “Westworld” is television’s next big game-changer, a great, multilayered tapestry of action and unexpected analysis made hypnotic by creators Jonathan Nolan and Lisa Joy and a cast that includes Anthony Hopkins, Jeffrey Wright, James Marsden, Ed Harris, Thandie Newton and Evan Rachel Wood.
 
-            </p>
-          </div>
-        </div>
-        <div class="revred">
-          <div class="revslika">
-            <img src="http://www.vishmax.com/en/innovattive-cms/themes/themax-theme-2015/images/no-image-found.gif" alt="Review" />
-          </div>
-          <div class="tekstrev">
-            <a href="">
-                      <h2>
+                    </p>
+                </div>
+            </div>
+            <div class="revred">
+                <div class="revslika">
+                    <img src="http://www.vishmax.com/en/innovattive-cms/themes/themax-theme-2015/images/no-image-found.gif" alt="Review" />
+                </div>
+                <div class="tekstrev">
+                    <a href="">
+                        <h2>
                         Title
                       </h2>
                     </a>
 
-            <p>
-              Prvi paragraf
-            </p>
-          </div>
-          </div>
+                    <p>
+                        Prvi paragraf
+                    </p>
+                </div>
+            </div>
 
-        <div class="revred">
-          <div class="revslika">
-            <img src="http://www.vishmax.com/en/innovattive-cms/themes/themax-theme-2015/images/no-image-found.gif" alt="Review" />
-          </div>
-          <div class="tekstrev">
-            <a href="">
-                      <h2>
+            <div class="revred">
+                <div class="revslika">
+                    <img src="http://www.vishmax.com/en/innovattive-cms/themes/themax-theme-2015/images/no-image-found.gif" alt="Review" />
+                </div>
+                <div class="tekstrev">
+                    <a href="">
+                        <h2>
                         Title
                       </h2>
                     </a>
 
-            <p>
-              Prvi paragraf
-            </p>
-          </div>
-          </div>
+                    <p>
+                        Prvi paragraf
+                    </p>
+                </div>
+            </div>
         </div>
-      </div>
-    </body>
-  </html>
+    </div>
+</body>
+
+</html>
