You Can't Rush Your Development (:
Signed-off-by: sbecirovic <seila.becirovic@gmail.com>

--- a/NerdHerd/allreview.html
+++ b/NerdHerd/allreview.html
@@ -44,7 +44,7 @@
             </h2>
                     </a>
                     <p>
-                        “Westworld” is television’s next big game-changer, a great, multilayered tapestry of action and unexpected analysis made hypnotic by creators Jonathan Nolan and Lisa Joy and a cast that includes Anthony Hopkins, Jeffrey Wright, James Marsden, Ed Harris, Thandie Newton and Evan Rachel Wood.
+                        “Westworld” is television’s next big game-changer, a great, multilayered tapestry of action and unexpected analysis made hypnotic by creators Jonathan Nolan and Lisa Joy.
 
                     </p>
                 </div>
