--- a/NerdHerd/index.html
+++ b/NerdHerd/index.html
@@ -35,18 +35,18 @@
         <div class="glavne">
             <div class="red">
                 <div class="element">
-                    <img src="http://www.vishmax.com/en/innovattive-cms/themes/themax-theme-2015/images/no-image-found.gif" alt="Review" />
-                    <a href="">
-                        <h2>
-            Title
-          </h2>
-                    </a>
-                </div>
-                <div class="bigel">
                     <img src="https://upload.wikimedia.org/wikipedia/en/e/eb/Westworld_(TV_series)_title_card.jpg" alt="Review" />
                     <a href="review.html">
                         <h2>
-            Westworld
+          Westworld
+        </h2>
+                    </a>
+                </div>
+                <div class="element">
+                    <img src="http://www.vishmax.com/en/innovattive-cms/themes/themax-theme-2015/images/no-image-found.gif" alt="Review" />
+                    <a href="">
+                        <h2>
+            Title
           </h2>
                     </a>
                 </div>
@@ -68,7 +68,7 @@
           </h2>
                     </a>
                 </div>
-                <div class="bigel">
+                <div class="element">
                     <img src="http://www.vishmax.com/en/innovattive-cms/themes/themax-theme-2015/images/no-image-found.gif" alt="Review" />
                     <a href="">
                         <h2>
@@ -94,7 +94,7 @@
                     </h2>
                     </a>
                 </div>
-                <div class="bigel">
+                <div class="element">
                     <img src="http://www.vishmax.com/en/innovattive-cms/themes/themax-theme-2015/images/no-image-found.gif" alt="Review" />
                     <a href="">
                         <h2>
