--- a/NerdHerd/review.html
+++ b/NerdHerd/review.html
@@ -37,7 +37,8 @@
                 <h1>Westworld</h1>
             </div>
             <div class="par">
-                <p>HBO swings big. That has been its brand since the days of “It’s not television, it’s HBO.” Television eventually caught up, which meant HBO had to swing bigger; it is not built for, or on, a slate of solid but not spectacular shows. It is a premium cable channel, which means it needs to bring the premium.
+                <p>HBO swings big. That has been its brand since the days of “It’s not television, it’s HBO.” Television eventually caught up, which meant HBO had to swing bigger; it is not built for, or on, a slate of solid but not spectacular shows. It
+                    is a premium cable channel, which means it needs to bring the premium.
                 </p>
             </div>
             <div class="revpic">
@@ -45,9 +46,11 @@
             </div>
             <div class="par">
                 <p>
-                    “Westworld” is television’s next big game-changer, a great, multilayered tapestry of action and unexpected analysis made hypnotic by creators Jonathan Nolan and Lisa Joy and a cast that includes Anthony Hopkins, Jeffrey Wright, James Marsden, Ed Harris, Thandie Newton and Evan Rachel Wood. It isn’t just great television, it’s vivid, thought-provoking television that entertains even as it examines the darker side of entertainment.
+                    “Westworld” is television’s next big game-changer, a great, multilayered tapestry of action and unexpected analysis made hypnotic by creators Jonathan Nolan and Lisa Joy and a cast that includes Anthony Hopkins, Jeffrey Wright, James Marsden, Ed Harris,
+                    Thandie Newton and Evan Rachel Wood. It isn’t just great television, it’s vivid, thought-provoking television that entertains even as it examines the darker side of entertainment.
                     <br>
-                    <br> “Westworld” is television’s next big game-changer, a great, multilayered tapestry of action and unexpected analysis made hypnotic by creators Jonathan Nolan and Lisa Joy and a cast that includes Anthony Hopkins, Jeffrey Wright, James Marsden, Ed Harris, Thandie Newton and Evan Rachel Wood. It isn’t just great television, it’s vivid, thought-provoking television that entertains even as it examines the darker side of entertainment.
+                    <br> “Westworld” is television’s next big game-changer, a great, multilayered tapestry of action and unexpected analysis made hypnotic by creators Jonathan Nolan and Lisa Joy and a cast that includes Anthony Hopkins, Jeffrey Wright,
+                    James Marsden, Ed Harris, Thandie Newton and Evan Rachel Wood. It isn’t just great television, it’s vivid, thought-provoking television that entertains even as it examines the darker side of entertainment.
                 </p>
             </div>
             <div class="komentar">
