What is done is done (:
Signed-off-by: sbecirovic <seila.becirovic@gmail.com>

--- a/NerdHerd/review.html
+++ b/NerdHerd/review.html
@@ -42,7 +42,7 @@
                 </p>
             </div>
             <div class="revpic">
-                <img src="https://upload.wikimedia.org/wikipedia/en/e/eb/Westworld_(TV_series)_title_card.jpg" alt="Review" />
+                <img src="http://i.lv3.hbo.com/assets/images/series/westworld/episodes/media-blast/160819-westworld-s1-blast-07-1280.jpg" alt="Review" />
             </div>
             <div class="par">
                 <p>
