--- a/NerdHerd/addreview.html
+++ b/NerdHerd/addreview.html
@@ -1,33 +1,35 @@
 
         <div class="glavne">
             <div class="dodrev">
-                <form class="forma-unosrev" action="index.html" method="get">
+                <form class="forma-unosrev" name="forma-unosrev" action="#" method="post" onsubmit="return unosRev()">
                     <div class="unosrev">
                         <label>Name</label>
-                        <input type="text" name="name" value="">
+                        <input type="text"  name="name" value="">
                         <br>
                     </div>
                     <div class="unosrev">
                         <label>Email</label>
-                        <input type="email" name="email" value="">
+                        <input type="email" name="email" value="" >
                         <br>
                     </div>
                     <div class="unosrev">
                         <label>Title</label>
-                        <input type="text" name="title" value="">
+                        <input type="text" name="title" value="" >
                         <br>
                     </div>
                     <div class="unosrev">
                         <label>Text</label>
-                        <textarea rows=10 maxlength="4000" name="Tekst"></textarea>
+                        <textarea rows=10 maxlength="4000" name="Tekst" ></textarea>
                     </div>
                     <div class="unosrev">
                         <label>Image</label>
-                        <input class="picbutton" accept="image/*" type="file" name="imgfile">
-                        <input class="uploadbutton" type="submit" name="submit" value="Upload">
+                        <input class="picbutton" accept="image/*" type="file" name="imgfile" multiple="multiple">
                     </div>
+                    <div class="unosrev">
+                     <ul class="greska"></ul>
+                   </div>
                     <input class="revbutton" type="submit" value="Send">
-                </form>
+                </form>                
             </div>
             <div class="napomene">
                 <h3> *Every review will be revised before publishing. Any writing, sign or visible representation that
