--- a/NerdHerd/contact.html
+++ b/NerdHerd/contact.html
@@ -1,7 +1,7 @@
 
         <div class="glavne">
             <div class="dodkont">
-                <form class="forma-kontakt" action="index.html" method="get">
+                <form class="forma-kontakt" action="#" onsubmit="return unosKont()" method="post">
                     <div class="unoskont">
                         <label>Name</label>
                         <input type="text" name="name" value="">
@@ -9,14 +9,18 @@
                     </div>
                     <div class="unoskont">
                         <label>Email</label>
-                        <input type="email" name="email" value="">
+                        <input type="email" name="email" value="" >
                         <br>
                     </div>
                     <div class="unoskont">
                         <label>Text</label>
                         <textarea rows=5 maxlength="1000" name="Tekst"></textarea>
                     </div>
+                    <div class="unoskont">
+                     <ul class="greska"></ul>
+                   </div>
                     <input class="konbutton" type="submit" value="Send">
                 </form>
             </div>
+          
         </div>
