That's me in the corner, that's me in the spotlight, losing my alignment, trying to keep up with css (:
Signed-off-by: sbecirovic <seila.becirovic@gmail.com>

--- a/NerdHerd/index.html
+++ b/NerdHerd/index.html
@@ -30,13 +30,13 @@
             </ul>
         </div>
         <div id="polje">
-          
+
+        </div>
     </div>
-  </div>
-  <div id="myModal" class="modal" onclick="closeButton()">
-    <span class="close" onclick="closeButton()">&times;</span>
-    <img class="modal-content" id="modalImage">
-  </div>
+    <div id="myModal" class="modal" onclick="closeButton()">
+        <span class="close" onclick="closeButton()">&times;</span>
+        <img class="modal-content" id="modalImage" src="http://www.vishmax.com/en/innovattive-cms/themes/themax-theme-2015/images/no-image-found.gif" alt="Review">
+    </div>
 
 </body>
 
